added js to search movies

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     <li>The player with the highest score gets to pick the movie of their choice.</li>
                     <li>You have 1 minute to answer the questions</li>
                     <li>Click the start button to begin.</li>
-                    <button class="button mt-6 ml-6 is-info">Start</button>
+                    <a href="./trivia.html">
+                        <button class="button mt-6 ml-6 is-info">Start</button>
+                    </a>
                 </ol>
 
             </div>
