--- a/search.html
+++ b/search.html
@@ -31,7 +31,7 @@
                     </div>
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
-                            <a class="navbar-item is-active">
+                            <!-- <a class="navbar-item is-active">
                                 Home
                             </a>
                             <a class="navbar-item">
@@ -39,7 +39,7 @@
                             </a>
                             <a class="navbar-item">
                                 Temporary
-                            </a>
+                            </a> -->
                             <span class="navbar-item">
                                 <a class="button is-primary is-inverted">
                                     <span class="icon">
@@ -61,7 +61,8 @@
                     Movie Battle
                 </p>
                 <p class="subtitle">
-                    Enjoy our selection
+                    <input id="movie-title" type="text" placeholder="Search" />
+                    <button id="submit-btn" placeholder="Submit">Submit</button>
                 </p>
             </div>
         </div>
