displayed all movies pics

--- a/search.html
+++ b/search.html
@@ -84,7 +84,7 @@
         </div>
     </section>
 
-    <div class="tile is-ancestor movie-info">
+    <div class="tile is-ancestor movie-info is-flex-wrap-wrap">
         <div class="tile is-parent is-4">
             <article class="tile is-child box">
                 <figure class="image is-4by3 poster">
