Add more js code

--- a/trivia.html
+++ b/trivia.html
@@ -53,43 +53,62 @@
     </div>
   </div>
 
-  
-  <section class="game">
-    <div class="columns is-10 is-mobile">
-      <div class="column gameQuestions ">
-        <div class="question">
-          <h4 class="qtns title is-4"></h4>
-        </div>
-        <div class="progressBar">          
-        </div>
-      </div>
-     </div>
-  </section>  
-  
-
-  <section class="playerSection">
-    <div class="columns is-10 is-mobile">
-      <!-- <div class="columns is-mobile"> -->
-        <div class="column players">
-          <div class="buttons">
-            <button class="buttonPlayer1 is-primary">Player 1 Score</button>
-            <button class="buttonPlayer2 is-link">Player 2 Score</button>
+  <main>
+    <section class="game">
+      <div class="columns is-10 is-mobile">
+        <div class="column gameQuestions ">
+          <div class="question">
+            <h4 class="qtns title is-4"></h4>
+          </div>
+          <div class="progressBar">
           </div>
         </div>
       </div>
-  </section>
+    </section>
 
-
-
-  <section>
-    <div class="columns is-mobile">
-      <div class="column scoreBoard ">
-        <h3 class="answer title is-3"></h3>            
+    <section>
+      <div class="columns is-mobile  ">
+        <div class="column ">
+          <h3 class="answer title is-3"></h3>
+        </div>
       </div>
-    </div>
+    </section>
 
-  </section>
-  
+    <section class="playerSection">
+      <div class="columns is-10 is-mobile">
+        <div class="column players">
+          <div class="buttons">
+            <button class="buttonPlayer1 is-primary">Player 1</button>
+            <button class="buttonPlayer2 is-link">Player 2</button>
+            <button class="nextQuestion is-link">Next Question</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="scoreBoard">
+      <div class="columns is-mobile">
+        <div class="column">
+          <h3 class="score title is-3"></h3>
+        </div>
+      </div>
+      <div class="columns is-mobile">
+        <div class="column">
+          <div>
+            <h3 class="player1 title is-3"></h3>
+            <h3 class="player2 title is-3"></h3>
+            <h3 class="tie title is-3"></h3>          
+          </div>
+        </div>
+      </div>        
+      
+    </section>
+
+  </main>
+
+
+
+
   <footer>
 
   </footer>
