--- a/search.html
+++ b/search.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/search.css">
 </head>
 
 <body>
@@ -22,29 +22,21 @@
             <nav class="navbar">
                 <div class="container">
                     <div class="navbar-brand">
-
-                        <span class="navbar-burger" data-target="navbarMenuHeroA">
-                            <span></span>
-                            <span></span>
-                            <span></span>
+                        <span>
+                            <a href="./trivia.html">
+                                <span class="navbar-burger button is-primary is-inverted" data-target="navbarMenuHeroA">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                </span>
+                            </a>
                         </span>
                     </div>
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
-                            <!-- <a class="navbar-item is-active">
-                                Home
-                            </a>
-                            <a class="navbar-item">
-                                Scores
-                            </a>
-                            <a class="navbar-item">
-                                Temporary
-                            </a> -->
                             <span class="navbar-item">
-                                <a class="button is-primary is-inverted">
-                                    <span class="icon">
-                                        <i class="fab fa-github"></i>
-                                    </span>
+                                <a href="./trivia.html" class="button is-primary is-inverted is-hovered">
+                                    <i class="fas fa-flag-checkered"></i>
                                     <span>Play Again</span>
                                 </a>
                             </span>
@@ -66,37 +58,22 @@
                 </p>
             </div>
         </div>
-
-
-        <div class="hero-foot">
-            <nav class="tabs">
-                <div class="container">
-                    <ul>
-                        <li class="is-active"><a>Overview</a></li>
-                        <li><a>Comedy</a></li>
-                        <li><a>Horror</a></li>
-                        <li><a>Trending</a></li>
-                        <li><a>Thriller</a></li>
-                        <li><a>Mystery</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
     </section>
 
-    <div class="tile is-ancestor movie-info is-flex-wrap-wrap">
-        <div class="tile is-parent is-4">
-            <article class="tile is-child box">
-                <figure class="image is-4by3 poster">
-                    <img src="https://bulma.io/images/placeholders/640x480.png">
-                </figure>
-                <p class="title">Movie Name</p>
-                <p class="subtitle rating">Rating</p>
-                <p class="subtitle release">Release Date</p>
-            </article>
+    <main class="background">
+        <div class="tile is-ancestor movie-info is-flex-wrap-wrap has-background-grey-light">
         </div>
-
-        <script src="./assets/search.js"></script>
+    </main>
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+                <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+            </p>
+        </div>
+    </footer>
+    <script src="./assets/search.js"></script>
 </body>
 
 </html>
