--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Movie-Battle-Search</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 
     <!-- Link jquery library -->
@@ -61,7 +61,7 @@
     </section>
 
     <main class="background">
-        <div class="tile is-ancestor movie-info is-flex-wrap-wrap has-background-grey-light">
+        <div class="tile is-ancestor movie-info is-flex-wrap-wrap">
         </div>
     </main>
     <footer class="footer">
