--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="hero is-primary is-medium">
+    <section class="hero is-primary is-large">
 
         <div class="hero-head">
             <nav class="navbar">
@@ -64,12 +64,10 @@
         <div class="tile is-ancestor movie-info is-flex-wrap-wrap">
         </div>
     </main>
-    <footer class="footer">
+    <footer class="footer has-background-white mt-6">
         <div class="content has-text-centered">
             <p>
-                <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+                <strong>Movie data gathered by </strong> <a href="https://www.themoviedb.org/">TMDb</a>
             </p>
         </div>
     </footer>
