added comments, cleaned up code, and deleted files not needed

--- a/search.html
+++ b/search.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-    <section class="hero is-primary is-large">
+    <!-- Page header -->
+    <section class="hero is-primary is-medium p-6">
 
         <div class="hero-head">
             <nav class="navbar">
@@ -46,7 +47,7 @@
             </nav>
         </div>
 
-
+        <!-- Title and search input -->
         <div class="hero-body">
             <div class="container has-text-centered">
                 <p class="title">
@@ -60,10 +61,13 @@
         </div>
     </section>
 
+    <!-- Area where searched movie titles populate via JS -->
     <main class="background">
         <div class="tile is-ancestor movie-info is-flex-wrap-wrap">
         </div>
     </main>
+
+    <!-- Footer with API acknowledgements -->
     <footer class="footer has-background-white mt-6">
         <div class="content has-text-centered">
             <p>
