CSS button size adjustments

--- a/search.html
+++ b/search.html
@@ -55,7 +55,7 @@
                 </p>
                 <p class="subtitle">
                     <input id="movie-title" type="text" placeholder="Search" />
-                    <button id="submit-btn" placeholder="Submit">Submit</button>
+                    <button class="button is-dark" button id="submit-btn" placeholder="Submit">Submit</button>
                 </p>
             </div>
         </div>
