Changed rules and added font

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie-Battle</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
     <!-- Link jquery library -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
@@ -36,11 +39,12 @@
                         <p class="title m-6">How To Play</p>
                         <ol class="subtitle m-6">
                             <li>Grab a partner.</li>
-                            <li>You will each alternate answering a question.</li>
                             <li>You will have 15 seconds to answer each questions.</li>
+                            <li>Click the name of the player who gets the answer first to add a point for that player.</li>
                             <li>If time runs out no one gets a point.</li>
                             <li>Whoever has the most points after 10 questions gets to choose which movie to watch!</li>
                             <li>Click the start button to begin.</li>
+                          </ol>
                     </div>
                     <footer class="card-footer">
                         <a href="./trivia.html" class="card-footer-item">
