Add comments and final touch

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
                         <ol class="subtitle m-6">
                             <li>Grab a partner.</li>
                             <li>You will have 15 seconds to answer each questions.</li>
-                            <li>Click the name of the player who gets the answer first to add a point for that player.</li>
+                            <li>Assign player 1 to yourself and player 2 to your partner.</li>    
+                            <li>To add a point click the player's button who answered the question correctly.</li>
                             <li>If time runs out no one gets a point.</li>
+                            <li>Click the next question button to get another question</li>
                             <li>Whoever has the most points after 10 questions gets to choose which movie to watch!</li>
                             <li>Click the start button to begin.</li>
                           </ol>
