--- a/search.html
+++ b/search.html
@@ -62,7 +62,7 @@
 
     <!-- Area where searched movie titles populate via JS -->
     <main class="background">
-        <div class="tile is-ancestor movie-info is-flex-wrap-wrap">
+        <div class="tile is-ancestor movie-info is-flex-wrap-wrap mx-1">
         </div>
     </main>
 
